# pangocairo-rs

./: .gitignore  Cargo.toml  README.md  build.rs
src/: cairo.rs  glib.rs  lib.rs  pango.rs  pangocairo.rs
